ddetect (0.109) UNRELEASED; urgency=low

  * Colin Watson
    - Detect BMAC Ethernet controllers, found on some PowerMacs. Ideally
      discover would be able to walk the mac-io bus ... (closes: #260427)

 -- Colin Watson <cjwatson@debian.org>  Tue, 20 Jul 2004 15:49:39 +0100

ddetect (0.108) unstable; urgency=low

  * Joey Hess
    - Undo my incorrect yenta_socket change of 0.105.
  * Updated translations: 
    - Bosnian (bs.po) by Safir Šećerović
    - Norwegian Nynorsk (nn.po) by Håvard Korsvoll

 -- Joey Hess <joeyh@debian.org>  Sat, 17 Jul 2004 17:35:22 -0400

ddetect (0.107) unstable; urgency=low

  * Joshua Kwan
    - Add a cardname parameter to load_module eth1394 so it shows up as
      Firewire ethernet.
  * Joey Hess
    - Don't bother with eth1394 for 2.4 kernel, it's only close to the
      spec in 2.6.
    - Don't register-module eth1394, hotplug takes care of it.

 -- Joey Hess <joeyh@debian.org>  Thu,  8 Jul 2004 20:53:30 -0400

ddetect (0.106) unstable; urgency=low

  * Joey Hess
    - Check to see if modules are available before loading them in all cases,
      and if they're unavailable, add them to the standard missing modules
      list.

 -- Joey Hess <joeyh@debian.org>  Thu,  8 Jul 2004 18:20:01 -0400

ddetect (0.105) unstable; urgency=low

  * Sylvain Ferriol
    - add plip in devnames
  * Joshua Kwan
    - add more devnames descriptions for powerpc
  * Joey Hess
    - Load yenta_socket a bit later, after the discover run, because it
      looked strange to load a module before it said it was detecting
      hardware. It still loads before any other modules.
    - Add progress display when loading modules for firewire CD.
    - Try to enable firewire ethernet support if ohci1394 is loaded.
      For now it does no real detection, just loads it.

 -- Joey Hess <joeyh@debian.org>  Tue,  6 Jul 2004 22:13:52 -0400

ddetect (0.104) unstable; urgency=low

  * Joey Hess
    - sleep may not be available, so don't completly crash out if it's not.