@@ -3,6 +3,8 @@ ddetect (0.109) UNRELEASED; urgency=low
   * Colin Watson
     - Detect BMAC Ethernet controllers, found on some PowerMacs. Ideally
       discover would be able to walk the mac-io bus ... (closes: #260427)
+  * Joey Hess
+    - Fix display of card names in the missing modules list.
 
  -- Colin Watson <cjwatson@debian.org>  Tue, 20 Jul 2004 15:49:39 +0100
 
